# df-wizard-chess

./: .buildpacks  .coveragerc  .env  .gitignore  .restyled.yaml  .travis.yml  Aptfile  CODE_OF_CONDUCT.md  README.md  README.rst  codecov.yml  config.py  index.html  pyproject.toml  requirements.txt  test.db  wsgi.py
.github/: dependabot.yml
chess_server/: __init__.py  chessgame.py  config.py  db.py  engine.py  main.py  models.py  routes.py  schema.sql  task today: Allow conversion of speech to move  utils.py
tests/: conftest.py  data.py  test_chess_server.py  test_chessgame.py  test_db.py  test_main.py  test_routes.py  test_utils.py  utils.py
