[tool.poetry]
name = "chess-server"
version = "0.1.1"
description = ""
authors = ["nikochiko <kaustubh299792458@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
gunicorn = "^20.0.4"
python-chess = "^0.31.0"
python-dotenv = "^0.13.0"
pytest-flask = "^1.0.0"
cairosvg = "^2.4.2"
flask-sqlalchemy = "^2.4.1"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.1.0"
flake8 = "^3.8.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
