[tool.poetry]
name = "chess-server"
version = "0.2.0"
description = ""
authors = ["nikochiko <kaustubh299792458@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.2"
gunicorn = "^20.0.4"
python-chess = "^0.31.4"
python-dotenv = "^0.15.0"
pytest-flask = "^1.1.0"
cairosvg = "^2.5.0"
flask-sqlalchemy = "^2.4.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-mock = "^3.3.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
